# notes_lifelog_rag

./: .gitignore  AGENTS.md  README.md  environment.yml  pyproject.toml
configs/: app.yaml  categories.yaml  models.yaml  prompts.yaml
docs/: application_overview.html
examples/sample_notes/: research_memory.md
scripts/: check_cuda.sh  run_gpu_analysis_sample.sh  run_gpu_embedding_sample.sh  smoke_test.sh
src/notes_lifelog_rag/: __init__.py  cli.py  config.py  logging_utils.py
src/notes_lifelog_rag/analysis/: __init__.py  service.py
src/notes_lifelog_rag/db/: __init__.py  schema.py
src/notes_lifelog_rag/embeddings/: __init__.py  engines.py  repository.py  vector.py
src/notes_lifelog_rag/ingest/: __init__.py  importer.py  parsers.py
src/notes_lifelog_rag/llm/: __init__.py  backends.py  json_utils.py  mock.py
src/notes_lifelog_rag/models/: __init__.py  status.py
src/notes_lifelog_rag/rerank/: __init__.py  engines.py
src/notes_lifelog_rag/runtime/: __init__.py  cuda.py  device.py
src/notes_lifelog_rag/search/: __init__.py  hybrid.py  keyword.py
src/notes_lifelog_rag/timeline/: __init__.py  month_narrative.py  review.py  service.py
src/notes_lifelog_rag/ui/: __init__.py  app.py  renderers.py  services.py  styles.py
src/notes_lifelog_rag/utils/: dates.py
tests/: test_analysis_diagnostics.py  test_analysis_mock.py  test_cli_device_options.py  test_dates.py  test_embeddings_hybrid.py  test_ingest_search.py  test_runtime_device_cuda.py  test_timeline_reflections.py  test_timeline_review.py  test_ui_services.py
(+4 files in other folders)
