[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "notes-lifelog-rag"
version = "0.1.0"
description = "Local-first Apple Notes lifelog RAG assistant"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12",
  "pydantic>=2.7",
  "pypdf>=4.0",
  "PyYAML>=6.0",
  "rich>=13.7",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
models = [
  "sentence-transformers>=2.7",
  "torch>=2.2",
  "transformers>=4.40",
]
ui = [
  "gradio>=4.44",
]

[project.scripts]
notes-lifelog-rag = "notes_lifelog_rag.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
